<resources>
    <string name="app_name">BM Task</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="ingredients_breakdown">Ingredients Breakdown</string>
    <string name="total_nutrition_facts">Total Nutrition Facts</string>
    <string name="please_add_ingredients_one_ingredient_per_line">Please add ingredients, one ingredient per line.\nExample: 1 cup rice</string>
    <string name="analyze">Analyze</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrate_fiber_sugar">Carbohydrate (Fiber, Sugar)</string>
    <string name="protein">Protein</string>
    <string name="vitamin">Vitamin</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string name="nutrition_facts">Nutrition Facts</string>
</resources>